5.5.0
-----
1. If using Lyrion theme and colour from cover, then default to green
   highlight.
2. Add option to show home-screen shortcuts in navigation drawer.
3. Allow smaller grid items if screen 350px or less.
4. Scale grid icons by grid size.
5. If viewing images from browse then allow to swiping left/right to view
   prev/next images.
6. Add button, shown on hover, to view images.

5.4.3
-----
1. Save settings when change player via menu in player settings dialog.
2. Only fetch list of works if not already showing list of works.
3. Remove role filter when listing album's via artist link.
4. Fix search results sub-title link highlight.
5. Make each artist clickable in album list sub-titles.
6. Use composer as sub-title for Works search results.
7. Fix treeview rendering.
8. Don't exclude current artist from album-subtitle click menu.
9. Type to scroll to genre in advanced search.

5.4.2
-----
 1. Tweak how navigation drawer list is scrolled to ensure current player is
    visible.
 2. Work-around drag highlight sometimes remaining after drop.
 3. Update volume slider collapsing code to handle window controls overlay.
 4. Add Wiim player icon.
 5. If using 18px or more of bottom padding then try to ensure menus do not
    go into padded area.
 6. Adjust sub-toolbar text alignments.
 7. Allow dragging favourites folder even if 'sort favourites' is enabled.
 8. Add custom classical, jazz, and rock radio icons.
 9. Fix home button position when detailed sub-toolbar is shown and background
    images are not used.
10. In sync and sleep dialogs don't respond to both touch and click events,
    only the first of type.
11. Use javascript code to play saved random mixes.
12. Add bottom padding to various fullscreen dialogs.
13. Pass role_id to works command.
14. If using large (greater than 20px) bottom padding in desktop layout, then
    don't expand now-playing bar image - just add padded area.
15. Remove smaller desktop now-playing bar, always use same height.