@@ -16,6 +16,10 @@ var lmsGallery = Vue.component("lms-gallery", {
    <div class="pswp__item"></div>
    <div class="pswp__item"></div>
   </div>
+  <img v-if="showActions && !queryParams.party && (!LMS_KIOSK_MODE || !HIDE_FOR_KIOSK.has(PLAY_ACTION))" class="ps-btn grid-btn" @click.stop="itemAction(PLAY_ACTION)" :title="ACTIONS[PLAY_ACTION].title" :src="'hover-play' | svgIcon"></img>
+  <img v-if="showActions && allowShuffle" class="ps-btn grid-btn" @click.stop="itemAction(PLAY_SHUFFLE_ACTION)" :title="ACTIONS[PLAY_SHUFFLE_ACTION].title" :src="'hover-shuffle' | svgIcon"></img>
+  <img v-if="showActions && !queryParams.party && (!LMS_KIOSK_MODE || !HIDE_FOR_KIOSK.has(INSERT_ACTION))" class="ps-btn grid-btn" @click.stop="itemAction(INSERT_ACTION)" :title="ACTIONS[INSERT_ACTION].title" :src="'hover-playnext' | svgIcon"></img>
+  <img v-if="showActions && (!LMS_KIOSK_MODE || !HIDE_FOR_KIOSK.has(ADD_ACTION))" class="ps-btn grid-btn" @click.stop="itemAction(ADD_ACTION)" :title="ACTIONS[ADD_ACTION].title" :src="'hover-add' | svgIcon"></img>
   <div class="pswp__ui pswp__ui--hidden">
    <div class="pswp__top-bar">
     <div class="pswp__counter"></div>
@@ -41,12 +45,21 @@ var lmsGallery = Vue.component("lms-gallery", {
   </div>
  </div>
 </div>`,
+    data() {
+        return {
+            showActions:false,
+            allowShuffle:false
+        }
+    },
     mounted() {
         this.isNowPlaying = false;
-        bus.$on('gallery.open', function(urls, startIndex, isNowPlaying, closeSignal) {
+        bus.$on('gallery.open', function(urls, startIndex, isNowPlaying, closeSignal, browseItems, allowShuffle) {
             this.isNowPlaying = undefined==isNowPlaying ? false : isNowPlaying;
             this.closeSignal = closeSignal;
             this.npUrl = isNowPlaying ? urls[0] : undefined;
+            this.browseItems = browseItems;
+            this.showActions = undefined!=browseItems && browseItems.length==urls.length;
+            this.allowShuffle = allowShuffle;
             var galleryInst = this;
             var images = [];
             for (var i=0, len=urls.length; i<len; ++i) {
@@ -70,6 +83,7 @@ var lmsGallery = Vue.component("lms-gallery", {
             // dialogOpen.browse-viewer.false by 1/2 second the code looking for 'esc' still thinks this dialog is open, and
             // so ignores the event. Hacky, but works.
             this.gallery.listen('close', function() {
+                galleryInst.browseItems = undefined;
                 setTimeout(function () {
                     galleryInst.$store.commit('dialogOpen', {name:'gallery', shown:false});
                     galleryInst.isNowPlaying = false;
@@ -96,6 +110,20 @@ var lmsGallery = Vue.component("lms-gallery", {
                 }
             }
         }.bind(this));
+    },
+    methods: {
+        itemAction(act) {
+            let idx = this.gallery.getCurrentIndex();
+            if (undefined!=this.browseItems && idx>=0 && idx<this.browseItems.length) {
+                bus.$emit('browse-action', act, this.browseItems[idx]);
+                this.gallery.close();
+            }
+        }
+    },
+    filters: {
+        svgIcon: function (name) {
+            return "/material/svg/"+name+"?c="+LMS_DARK_SVG+"&c2=333&r="+LMS_MATERIAL_REVISION;
+        }
     }
 });
 
