@@ -8,6 +8,7 @@
 5. If viewing images from browse then allow to swiping left/right to view
    prev/next images.
 6. Add button, shown on hover, to view images.
+7. Add play/add/insert/shuffle buttons when viewing some images.
 
 5.4.3
 -----
